Refactor from example to Canvas

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
+displayName=Canvas
+author=Cantrick
 description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+tags=drawing,fun
+plugins=com.canvas.CanvasMain
