--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -2,4 +2,4 @@ displayName=Canvas
 author=Cantrick
 description=An example greeter plugin
 tags=drawing,fun
-plugins=com.canvas.CanvasMain
+plugins=com.canvas.CanvasPlugin
