--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
 displayName=Canvas
 author=Cantrick
-description=An example greeter plugin
+description=Allows you to draw all over your runelite screen!
 tags=drawing,fun
 plugins=com.canvas.CanvasPlugin
